--- a/todo/Cargo.toml
+++ b/todo/Cargo.toml
@@ -11,3 +11,7 @@ askama = "0.12.1"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 thiserror = "1.0.58"
+rusqlite = { version = "0.31", features = ["bundled"] }
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.24.0"
+env_logger = "0.11.0"
